--- a/tipeoWeb.html
+++ b/tipeoWeb.html
@@ -118,17 +118,20 @@
             </div>
     
                 <div class="col-12 mb-3 d-flex justify-content-end ingreso-egreso" style="overflow-x: auto; white-space: nowrap;">
-                    <div style="min-width: 100%;">
-                        <button class="btn btn-dark" id="btnVolverAtras" type="button" title="Volver atrás" style="display: none;">
-                            <i class="bi bi-arrow-return-left" style="font-size: 22px;"></i> Atrás
-                        </button>
-                        <button class="btn btn-light" id="btnIniciarEscaneo" type="button" data-bs-toggle="modal" data-bs-target="#modalDespacho">
-                            <i class="bi bi-clipboard-pulse" style="font-size: 22px; color: #a517be;"></i> Iniciar Escaneo
-                        </button>
-                        <button class="btn btn-light" id="btnEstadisticas" type="button" data-bs-toggle="modal" data-bs-target="#modalEstadisticas">
+                <div style="min-width: 100%;">
+                    <button class="btn btn-dark" id="btnVolverAtras" type="button" title="Volver atrás" style="display: none;">
+                        <i class="bi bi-arrow-return-left" style="font-size: 22px;"></i> Atrás
+                    </button>
+                    <button class="btn btn-light" id="btnIniciarEscaneo" type="button" data-bs-toggle="modal" data-bs-target="#modalDespacho">
+                        <i class="bi bi-clipboard-pulse" style="font-size: 22px; color: #a517be;"></i> Iniciar Escaneo
+                    </button>
+                    <button class="btn btn-light" id="btnEstadisticas" type="button" data-bs-toggle="modal" data-bs-target="#modalEstadisticas">
                         <i class="bi bi-bar-chart" style="font-size: 22px; color: #1776be;"></i> Estadísticas
-                        </button>
-                    </div>                                                           
+                    </button>
+                    <button class="btn btn-light" id="btnBuscarInfoRemitos" type="button">
+                        <i class="bi bi-binoculars-fill" style="font-size: 22px; color: #fb8e00;"></i> Buscar Remitos
+                    </button>
+                </div>                                                        
                 </div>
         </div>
     </div>                
