--- a/posventa.html
+++ b/posventa.html
@@ -326,7 +326,7 @@
                 const boton = document.getElementById("sinRevisar");
                 if (contadorPendientes === 0) {
                     boton.title = "Nada por Ahora ☕️";
-                    boton.innerHTML = `<i class="fas fa-cog"></i> Nada por Ahora ☕️`;
+                    boton.innerHTML = `Nada por Ahora ☕️`;
                 } else {
                     boton.title = `Promedio Despacho: ${contadorPendientes} sin Revisar`;
                     boton.innerHTML = `<i class="fas fa-cog fa-spin"></i> Quedan ${contadorPendientes}`;
