--- a/tipeoWeb.html
+++ b/tipeoWeb.html
@@ -1062,9 +1062,10 @@
         <button id="logoutButton" class="btn btn-danger mt-3"><i class="bi bi-person-gear mr-1"></i>Cerrar Sesión</button>
     </footer>   
 
-    <!-- Scripts Firebase-->
+    <!-- CORRECTO: Orden adecuado para Firebase 8.x -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/print.js/1.6.0/print.min.js"></script>
 
