--- a/tipeoWeb.html
+++ b/tipeoWeb.html
@@ -1062,7 +1062,7 @@
         <button id="logoutButton" class="btn btn-danger mt-3"><i class="bi bi-person-gear mr-1"></i>Cerrar Sesión</button>
     </footer>   
 
-    <!-- CORRECTO: Orden adecuado para Firebase 8.x -->
+    <!-- Firebase 8.x -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
