--- a/controlMeli.html
+++ b/controlMeli.html
@@ -127,6 +127,7 @@
                 <button type="button" id="borrarButton" class="btn btn-light me-2" onclick="borrarElemento()">
                     <i class="bi bi-trash3-fill" style="font-size: 22px; color: #e67e22;"></i> Borrar Todo
                 </button>
+
             </div>            
             
         </div>
@@ -439,6 +440,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+        <script src="./js/firebase-init.js"></script>
         <script src="./js/features.js"></script>
         <script src="./js/controlMeli.js"></script>
 
