--- a/controlMeli.html
+++ b/controlMeli.html
@@ -193,9 +193,16 @@
             </div>
             <div class="modal-body">
                 <input type="file" id="fileInput" accept=".txt" class="form-control mb-3">
-                <button type="button" class="btn btn-secondary mb-1" id="backButton" style="display: none;">
-                    <i class="bi bi-arrow-left"></i> Atrás
-                </button>
+
+                <div class="d-flex gap-2">
+                    <button type="button" class="btn btn-secondary mb-1" id="backButton" style="display: none;">
+                        <i class="bi bi-arrow-left"></i> Atrás
+                    </button>
+                    <button type="button" class="btn btn-info mb-1 ml-2" id="printQueryButton" style="display: none;">
+                        <i class="bi bi-printer"></i> Imprimir Query
+                    </button>
+                </div>
+
                 <div class="d-flex justify-content-center my-3 contenedor-spinner33">
                     <div id="spinner33" class="spinner-border text-info spinner-large" role="status">
                         <span class="visually-hidden"></span>
@@ -440,6 +447,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+        <script src="./js/firebase-init-stock.js"></script>
         <script src="./js/firebase-init.js"></script>
         <script src="./js/features.js"></script>
         <script src="./js/controlMeli.js"></script>
