--- a/controlMeli.html
+++ b/controlMeli.html
@@ -195,6 +195,18 @@
             <div class="modal-body">
                 <input type="file" id="fileInput" accept=".txt" class="form-control mb-3">
 
+                <div class="search-container mb-3">
+                <button id="searchButton" class="btn btn-sm btn-outline-secondary search-button-macos">
+                    <i class="bi bi-search"></i> Buscar tandas por operación
+                </button>
+                <div id="searchInputContainer" class="search-input-container-macos" style="display: none;">
+                    <input type="text" id="tandaSearchInput" class="form-control form-control-sm search-input-macos" 
+                        placeholder="Ingrese código de 16 dígitos..." maxlength="16">
+                    <div id="searchResults" class="search-results-macos mt-2"></div>
+                    <div id="countdownText" style="font-size: 0.8em; margin-top: 8px; color: #666;"></div>
+                </div>
+                </div>
+
                 <div class="d-flex gap-2">
                     <button type="button" class="btn btn-secondary mb-1" id="backButton" style="display: none;">
                         <i class="bi bi-arrow-left"></i> Atrás
