--- a/etiquetaSimbel.html
+++ b/etiquetaSimbel.html
@@ -250,7 +250,7 @@
                     </div>
                     <div class="form-group">
                         <label for="obs">Observaciones</label>
-                        <input type="text" class="form-control" id="obs">
+                        <input type="text" class="form-control" id="obs" required>
                     </div>
 
                     <div class="highlighted-section mb-2" style="border: 2px dashed #007bff; padding: 10px; margin-top: 20px; border-radius: 10px;">
