--- a/bna.html
+++ b/bna.html
@@ -114,7 +114,7 @@
                 <small style="display: block; padding: 12px; background-color: #f6f6f8; border-radius: 10px; border: 1px solid #ddd; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif; font-size: 14px; color: #333;">
                   ℹ️ La web muestra las últimas <strong>1000 ventas</strong>. Con esta búsqueda podés ver el <strong>histórico completo</strong> de pedidos.<br>
                   🧾 Buscá por <strong>Orden</strong> o <strong>Orden Pública</strong>.<br>
-                  📌 Ejemplo: <code>993803</code> o <code>993803-1034700-2941</code>
+                  📌 Ejemplo: BNA / Macro <code>993803</code>, <code>993803-1034700-2941</code> o Bapro <code>bpr-1535707336344-01</code>
                 </small>
                 <!-- Mensaje de alerta personalizado -->
                 <div style=" background-color: #fedddd; color: #da2c29; border: 1px solid #ebccd1; border-radius: 10px; padding: 10px; margin-top: 10px; font-size: 14px;">
@@ -411,10 +411,13 @@
         <button id="logoutButton" class="btn btn-danger mt-3"><i class="bi bi-person-gear mr-1"></i>Cerrar Sesión</button>
     </footer>   
 
-    <!-- Scripts Firebase-->
+    <!-- Firebase 8.x -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
 
     <!-- Scripts Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
