--- a/tipeoWeb.html
+++ b/tipeoWeb.html
@@ -118,22 +118,30 @@
                 </div>
             </div>
     
-                <div class="col-12 mb-3 d-flex justify-content-end ingreso-egreso" style="overflow-x: auto; white-space: nowrap;">
-                <div style="min-width: 100%;">
-                    <button class="btn btn-dark" id="btnVolverAtras" type="button" title="Volver atrás" style="display: none;">
-                        <i class="bi bi-arrow-return-left" style="font-size: 22px;"></i> Atrás
-                    </button>
-                    <button class="btn btn-light" id="btnIniciarEscaneo" type="button" data-bs-toggle="modal" data-bs-target="#modalDespacho">
-                        <i class="bi bi-clipboard-pulse" style="font-size: 22px; color: #a517be;"></i> Iniciar Escaneo
-                    </button>
-                    <button class="btn btn-light" id="btnEstadisticas" type="button" data-bs-toggle="modal" data-bs-target="#modalEstadisticas">
-                        <i class="bi bi-bar-chart" style="font-size: 22px; color: #1776be;"></i> Estadísticas
-                    </button>
-                    <button class="btn btn-light" id="btnBuscarInfoRemitos" type="button">
-                        <i class="bi bi-binoculars-fill" style="font-size: 22px; color: #fb8e00;"></i> Buscar Remitos
-                    </button>
-                </div>                                                        
-                </div>
+            <div class="col-12 mb-3 d-flex justify-content-end ingreso-egreso" style="overflow-x: auto; white-space: nowrap;">
+            <div style="min-width: 100%;">
+                <button class="btn btn-dark" id="btnVolverAtras" type="button" title="Volver atrás" style="display: none;">
+                <i class="bi bi-arrow-return-left" style="font-size: 22px;"></i> Atrás
+                </button>
+                <button class="btn btn-light" id="btnIniciarEscaneo" type="button" data-bs-toggle="modal" data-bs-target="#modalDespacho">
+                <i class="bi bi-clipboard-pulse" style="font-size: 22px; color: #a517be;"></i> Iniciar Escaneo
+                </button>
+                <button class="btn btn-light" id="btnEstadisticas" type="button" data-bs-toggle="modal" data-bs-target="#modalEstadisticas">
+                <i class="bi bi-bar-chart" style="font-size: 22px; color: #1776be;"></i> Estadísticas
+                </button>
+                <button class="btn btn-light" id="btnBuscarInfoRemitos" type="button">
+                <i class="bi bi-binoculars-fill" style="font-size: 22px; color: #fb8e00;"></i> Buscar Remitos
+                </button>
+                <button class="btn btn-primary btn-seguro" id="btnReporteSeguro" type="button">
+                <span class="spinner-border spinner-border-sm d-none" role="status" aria-hidden="true" id="spinnerSeguro"></span>
+                <i class="bi bi-shield-lock-fill" style="font-size: 22px; color: #f6ff00;" id="iconoSeguro"></i>
+                <span id="textoSeguro">Reporte de Seguro</span>
+                </button>
+                <!-- Input invisible para flatpickr -->
+                <input type="text" id="inputFlatpickrSeguro" class="input-flatpickr-temp" 
+                    style="opacity:0; width:1px; height:1px; border:none; padding:0; margin:0; position:relative; z-index:10;" />
+            </div>
+            </div>
         </div>
     </div>                
 
