--- a/tipeoWeb.html
+++ b/tipeoWeb.html
@@ -132,9 +132,9 @@
                 <button class="btn btn-light" id="btnBuscarInfoRemitos" type="button">
                 <i class="bi bi-binoculars-fill" style="font-size: 22px; color: #fb8e00;"></i> Buscar Remitos
                 </button>
-                <button class="btn btn-light btn-seguro" id="btnReporteSeguro" type="button">
+                <button class="btn btn-primary btn-seguro" id="btnReporteSeguro" type="button">
                 <span class="spinner-border spinner-border-sm d-none" role="status" aria-hidden="true" id="spinnerSeguro"></span>
-                <i class="bi bi-shield-lock-fill" style="font-size: 22px; color: green;" id="iconoSeguro"></i>
+                <i class="bi bi-shield-lock-fill" style="font-size: 22px; color: #f6ff00;" id="iconoSeguro"></i>
                 <span id="textoSeguro">Reporte de Seguro</span>
                 </button>
                 <!-- Input invisible para flatpickr -->
