--- a/tipeoWeb.html
+++ b/tipeoWeb.html
@@ -1064,8 +1064,7 @@
                 </button>
                 <button type="button" class="btn btn-mac-primary" id="btnSubirDocumentacion" disabled>
                     <span class="spinner-border spinner-border-sm d-none" id="spinnerSubirDoc"></span>
-                    <i class="bi bi-cloud-upload me-2 mr-1"></i>
-                    Subir
+                    <i id="iconoSubirDoc" class="bi bi-cloud-upload me-2 mr-1"></i>
                 </button>
             </div>
         </div>
