--- a/tipeoWeb.html
+++ b/tipeoWeb.html
@@ -1190,6 +1190,7 @@
     <script src="./js/firebase-init-Bot.js"></script>
 
     <!-- ExcelJS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/exceljs/dist/exceljs.min.js"></script>
 
     <!-- Cargar FlatPickr -->
