--- a/tipeoWeb.html
+++ b/tipeoWeb.html
@@ -1064,7 +1064,7 @@
                 </button>
                 <button type="button" class="btn btn-mac-primary" id="btnSubirDocumentacion" disabled>
                     <span class="spinner-border spinner-border-sm d-none" id="spinnerSubirDoc"></span>
-                    <i id="iconoSubirDoc" class="bi bi-cloud-upload me-2 mr-1"></i>
+                    <i id="iconoSubirDoc" class="bi bi-cloud-arrow-up-fill me-2 mr-1"></i>
                 </button>
             </div>
         </div>
