--- a/bna.html
+++ b/bna.html
@@ -448,6 +448,7 @@
     <script src="./js/firebase-init.js"></script>
     <script src="./js/firebase-init-stock.js"></script>
     <script src="./js/firebase-init-Meli.js"></script>
+    <script src="./js/firebase-init-Vtex.js"></script>
     <script src="./js/bnaCards.js"></script>
     <script src="./js/features.js"></script>
     <script src="./js/ciudades.js"></script>
