--- a/bnaPlaceIt.html
+++ b/bnaPlaceIt.html
@@ -357,6 +357,7 @@
     <script src="./js/firebase-init.js"></script>
     <script src="./js/firebase-init-Meli.js"></script>
     <script src="./js/bnaCardsPlaceIt.js"></script>
+    <script src="./js/firebase-init-Vtex.js"></script>
     <script src="./js/pedidoBrainsys.js"></script>
     <script src="./js/features.js"></script>
     <script src="./js/ciudades.js"></script>
